--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "MultiPlaydate",
+  "name": "multi-playdate",
   "version": "1.0.0",
-  "description": "A React-based thingy",
+  "description": "A web app for gamers who want to coordinate gaming sessions",
   "main": "index.html",
   "scripts": {
     "dev": "webpack-dev-server",
@@ -48,15 +48,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Coding-Christian/dice-roller.git"
+    "url": "git+https://github.com/Coding-Christian/multi-playdate.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Coding-Christian/dice-roller/issues"
+    "url": "https://github.com/Coding-Christian/multi-playdate/issues"
   },
-  "homepage": "https://github.com/Coding-Christian/dice-roller#readme",
+  "homepage": "https://github.com/Coding-Christian/multi-playdate#readme",
   "eslintIgnore": [],
   "eslintConfig": {
     "env": {
